# path-finder

./: .gitignore  CMakeLists.txt  Makefile
include/maze-solver/: node.hpp
include/path-finder/: graph.hpp  solver.hpp
src/: main.cpp
src/solvers/: dijkstra.cpp
